# imgcaptioner

./: .gitignore  README.md  pyproject.toml  test_caption.py
app/: main.py
app/utils/: captioner.py
